<resources>
    <string name="BMP">BMP</string>
    <string name="BPM_bigger_100">BPM&gt;100</string>
    <string name="BPM_bigger_60_smaller_100">60&lt;=BPM&lt;=100</string>
    <string name="BPM_smaller_60">BPM&lt;60</string>
    <string name="Blood_Pressure_Tracker">Blood Pressure Tracker</string>
    <string name="Control_blood_Pressure_trends_more_clearly">Control blood Pressure trends more clearly </string>
    <string name="Dier_plan_to_prevent_hypertension_DASH">Dier plan to prevent hypertension DASH</string>
    <string name="Do_you_want_to_delete_it">Do you want to delete it?</string>
    <string name="Do_you_want_to_save_this_change">Do you want to save this change?</string>
    <string name="Flash">Flash</string>
    <string name="Get_your_Blood_Pressure_in_Check">Get your Blood Pressure in Check</string>
    <string name="Heart_Rate_Tracker">Heart Rate Tracker</string>
    <string name="High_Blood_Pressure_in_Pregnancy">High Blood Pressure in Pregnancy</string>
    <string name="Hold_on_for_a_while">Hold on for a while</string>
    <string name="Improve_your_lifestyle_health_knowledge_better_and_better">Improve your lifestyle health knowledge better and better</string>
    <string name="Learning_about_Blood_Pressure">Learning about Blood Pressure</string>
    <string name="Link">Link</string>
    <string name="Manual_Input">Manual Input</string>
    <string name="Measure">Measure</string>
    <string name="Measure_again">Measure again</string>
    <string name="Measuring">Measuring</string>
    <string name="More_info">More info</string>
    <string name="Not_record_for">Not record for</string>
    <string name="Oh_no">Oh, no!</string>
    <string name="Please_feedback">Please feedback</string>
    <string name="Please_leave_us_some_feedback">Please leave us some feedback</string>
    <string name="Professional_Chart_Analysis">Professional Chart Analysis </string>
    <string name="Record">Record</string>
    <string name="Reference_info_at_Link">Reference info at</string>
    <string name="Result">Result</string>
    <string name="Send">Send</string>
    <string name="Send_Email">Send Email</string>
    <string name="Set_Alarm">Set Alarm</string>
    <string name="Set_a_alarm_to_remind">Set a alarm to remind me to record blood sugar better. You can change it anytime in “settings” or “tracker”</string>
    <string name="Sound">Sound</string>
    <string name="Sys_Dia">Sys - Dia</string>
    <string name="Thank_for_your_feedback">Thank for your feedback.</string>
    <string name="The_best_we_can_get">The best we can get :)</string>
    <string name="There_is_no">There is no email client installed.</string>
    <string name="Track_record_and_analyze_your_Blood_Pressure">Track, record and analyze your Blood Pressure </string>
    <string name="Value_must_be_smaller_than_300">Value must be smaller than 300</string>
    <string name="Vibrate">Vibrate</string>
    <string name="We_are_working">We are working hard for a better user experience.</string>
    <string name="We_greatly_appreciate">We’d greatly appreciate if you can rate us .</string>
    <string name="We_like_you_too">We like you too!</string>
    <string name="Welcome">Welcome,</string>
    <string name="Writing_something">Writing something…</string>
    <string name="You_will_record_blood_pressure_at">You will record blood pressure at</string>
    <string name="You_will_record_heart_rate_at">You will record heart rate at</string>
    <string name="Your_heart_rate_is_at">Your heart rate is at</string>
    <string name="_100_bpm">&gt; 100 BPM</string>
    <string name="_120">&lt; 120</string>
    <string name="_120_">120+</string>
    <string name="_120_129">120-129</string>
    <string name="_130_">130+</string>
    <string name="_130_139">130-139</string>
    <string name="_140">140+</string>
    <string name="_180">180+</string>
    <string name="_1_gestational_hypertension">1. Gestational hypertension</string>
    <string name="_1_normal">1. Normal</string>
    <string name="_1_normal_blood_pressure">1. Normal Blood Pressure</string>
    <string name="_2_chronic_hypertension">2. Chronic hypertension</string>
    <string name="_2_elevated">2. Elevated</string>
    <string name="_2_elevated_blood_pressure">2. Elevated Blood Pressure</string>
    <string name="_3_Preeclampsia">3. Preeclampsia</string>
    <string name="_3_high_blood_pressure_stage_1">3. High Blood Pressure - Stage 1</string>
    <string name="_3_hypertension_stage_1">3. Hypertension - Stage 1</string>
    <string name="_4_high_blood_pressure_stage_2">4. High Blood Pressure - Stage 2</string>
    <string name="_4_hypertension_stage_2">4. Hypertension - Stage 2</string>
    <string name="_5_dangerously_high_blood_pressure">5. Dangerously High Blood Pressure</string>
    <string name="_5_hypertension_crisis">5. Hypertension Crisis</string>
    <string name="_60_bpm">&lt; 60 BPM</string>
    <string name="_80">&lt; 80</string>
    <string name="_80_">80+</string>
    <string name="_80_89">80-89</string>
    <string name="_90">90+</string>
    <string name="_age">• Age</string>
    <string name="_family_history">• Family History</string>
    <string name="_lifestyle">• Lifestyle</string>
    <string name="_please_input_a_valid_value">Please input a valid value</string>
    <string name="_race_ethnicity">• Race/Ethnicity</string>
    <string name="_sex">• Sex</string>
    <string name="_weight">• Weight</string>
    <string name="a_family_history_of_high_blood_pressure_raises">A family history of high blood pressure raises the risk of developing high blood pressure.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="anyone_can_develop_high_blood_pressure">Anyone can develop high blood pressure, but there are certain factors that can increase your risk:</string>
    <string name="before_age_55_men_are_more_likely">Before age 55, men are more likely than women to develop high blood pressure. After age 55, women are more likely than men to develop it.</string>
    <string name="blood_pressure_is_the_force_of_your_blood_pushing_against">Blood pressure is the force of your blood pushing against the walls of your arteries as your heart pumps blood. High blood pressure, or hypertension, is when this force against your artery walls is too high. There are different types of high blood pressure in pregnancy:</string>
    <string name="blood_pressure_is_the_force_of_your_blood_pushing_against_the_walls_of_your_arteries">Blood pressure is the force of your blood pushing against the walls of your arteries. Each time your heart beats, it pumps blood into the arteries. Your blood pressure is highest when your heart beats, pumping the blood. This is called systolic pressure. When your heart is at rest, between beats, your blood pressure falls. This is called diastolic pressure.</string>
    <string name="certain_lifestyle_habits_can_raise_your_risk">Certain lifestyle habits can raise your risk for high blood pressure, such as eating too much sodium (salt) or not enough potassium, lack of exercise, drinking too much alcohol, and smoking.</string>
    <string name="chronic_hypertension_is_high_blood_pressure">Chronic hypertension is high blood pressure that started before the 20th week of pregnancy or before you became pregnant. Some women may have had it long before becoming pregnant but didn\'t know it until they got their blood pressure checked at their prenatal visit. Sometimes chronic hypertension can also lead to preeclampsia.</string>
    <string name="gestational_hypertension_is_high_blood_pressure">Gestational hypertension is high blood pressure that you develop while you are pregnant. It starts after you are 20 weeks pregnant. You usually don\'t have any other symptoms. In many cases, it does not harm you or your baby, and it goes away within 12 weeks after childbirth. But it does raise your risk of high blood pressure in the future. It sometimes can be severe, which may lead to low birth weight or preterm birth. Some women with gestational hypertension do go on to develop preeclampsia.</string>
    <string name="high_blood_pressure_in_pregnancy">High Blood Pressure in Pregnancy</string>
    <string name="high_blood_pressure_is_more_common">High blood pressure is more common in African American adults.</string>
    <string name="high_blood_pressure_usually_has_no_symptoms">High blood pressure usually has no symptoms. So the only way to find out if you have it is to get regular blood pressure checks from your health care provider. Your provider will use a gauge, a stethoscope or electronic sensor, and a blood pressure cuff. He or she will take two or more readings at separate appointments before making a diagnosis.</string>
    <string name="how_is_high_blood_pressure_diagnosed">How is high blood pressure diagnosed?</string>
    <string name="introduction">Introduction</string>
    <string name="learn_about_blood_pressure">Learn About Blood Pressure</string>
    <string name="lower_blood_pressure_by_exercises">Lower Blood Pressure by Exercises</string>
    <string name="many_of_those_with_high_blood_pressure_do_not_know_they_have_it">Many of those with high blood pressure don\'t know they have it, because there are usually no warning signs. This can be dangerous, because high blood pressure can lead to life-threatening conditions like heart attack or stroke. The good news is that you can often prevent or treat high blood pressure. Early diagnosis and heart-healthy lifestyle changes can keep high blood pressure from seriously damaging your health.</string>
    <string name="people_who_are_overweight_or_have_obesity">People who are overweight or have obesity are more likely to develop high blood pressure.</string>
    <string name="preeclampsia_is_a_sudden_increase_in_blood_pressure">Preeclampsia is a sudden increase in blood pressure after the 20th week of pregnancy. It usually happens in the last trimester. In rare cases, symptoms may not start until after delivery. This is called postpartum preeclampsia. Preeclampsia also includes signs of damage to some of your organs, such as your liver or kidney. The signs may include protein in the urine and very high blood pressure. Preeclampsia can be serious or even life-threatening for both you and your baby.</string>
    <string name="some_people_have_low_blood_pressure_all_the_time">Some people have low blood pressure all the time. They have no symptoms and their low readings are normal for them. In other people, blood pressure drops below normal because of a medical condition or certain medicines. Some people may have symptoms of low blood pressure when standing up too quickly. Low blood pressure is a problem only if it causes dizziness, fainting or in extreme cases, shock.</string>
    <string name="what_is_blood_pressure">What is Blood Pressure?</string>
    <string name="what_is_high_blood_pressure_in_pregnancy">What is high blood pressure in pregnancy?</string>
    <string name="who_is_at_risk_for_high_blood_pressure">Who is at risk for high blood pressure?</string>
    <string name="you_are_probably_heard_that_high_blood_pressure">You\'ve probably heard that high blood pressure is a problem. Sometimes blood pressure that is too low can also cause problems. A normal person\'s blood pressure is 120/80, if your blood pressure reading is 90/60 or lower, you have low blood pressure.</string>
</resources>