<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_info_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_102sdp"
        android:layout_gravity="center"
        android:background="@drawable/ic_bg_detail_info_new_03"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="@dimen/_46sdp"
            android:layout_height="@dimen/_46sdp"
            android:src="@drawable/ic_info_new_03" />

        <TextView
            android:layout_width="@dimen/_161sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:autoSizeMaxTextSize="@dimen/_18ssp"
            android:autoSizeMinTextSize="@dimen/_10ssp"
            android:autoSizeStepGranularity="@dimen/_1ssp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:text="@string/who_is_at_risk_for_high_blood_pressure"
            android:textColor="@color/color_1E252B"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/border_linear_info_detail"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingVertical="@dimen/_16sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingRight="@dimen/_18sdp"
        android:paddingBottom="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/anyone_can_develop_high_blood_pressure"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/_age"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/blood_pressure_tends_to_rise_with_age."
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/_race_ethnicity"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/high_blood_pressure_is_more_common"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/_weight"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/people_who_are_overweight_or_have_obesity"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/_sex"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/before_age_55_men_are_more_likely"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/_lifestyle"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/certain_lifestyle_habits_can_raise_your_risk"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/_family_history"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/a_family_history_of_high_blood_pressure_raises"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
