<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_info_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_102sdp"
        android:layout_gravity="center"
        android:background="@drawable/ic_bg_detail_info_new_06"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="@dimen/_46sdp"
            android:layout_height="@dimen/_46sdp"
            android:src="@drawable/ic_info_new_06" />

        <TextView
            android:layout_width="@dimen/_161sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:autoSizeMaxTextSize="@dimen/_18ssp"
            android:autoSizeMinTextSize="@dimen/_10ssp"
            android:autoSizeStepGranularity="@dimen/_1ssp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:text="@string/high_blood_pressure_in_pregnancy"
            android:textColor="@color/color_1E252B"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/border_linear_info_detail"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_18sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_18sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_18sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:background="@drawable/bg_view_hight_blood_pressure_in_preg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:autoSizeMaxTextSize="@dimen/_14ssp"
                android:autoSizeMinTextSize="@dimen/_8ssp"
                android:autoSizeStepGranularity="@dimen/_1ssp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_bold"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:maxLines="2"
                android:text="@string/what_is_high_blood_pressure_in_pregnancy"
                android:textColor="@color/color_323232"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/blood_pressure_is_the_force_of_your_blood_pushing_against"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="2"
            android:text="@string/_1_gestational_hypertension"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/gestational_hypertension_is_high_blood_pressure"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="2"
            android:text="@string/_2_chronic_hypertension"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/chronic_hypertension_is_high_blood_pressure"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="2"
            android:text="@string/_3_Preeclampsia"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/preeclampsia_is_a_sudden_increase_in_blood_pressure"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
