<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_info_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_102sdp"
        android:layout_gravity="center"
        android:background="@drawable/ic_bg_detail_info_new_05"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="@dimen/_46sdp"
            android:layout_height="@dimen/_46sdp"
            android:src="@drawable/ic_info_new_05" />

        <TextView
            android:layout_width="@dimen/_161sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:autoSizeMaxTextSize="@dimen/_18ssp"
            android:autoSizeMinTextSize="@dimen/_10ssp"
            android:autoSizeStepGranularity="@dimen/_1ssp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:text="@string/lower_blood_pressure_by_exercises"
            android:textColor="@color/color_1E252B"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/border_linear_info_detail"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingVertical="@dimen/_16sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingRight="@dimen/_18sdp"
        android:paddingBottom="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/you_are_probably_heard_that_high_blood_pressure"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/some_people_have_low_blood_pressure_all_the_time"
            android:textColor="@color/color_323232"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</LinearLayout>
